objects/LLC_BI__DocInfo__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__DocClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Document Class</label>
        <referenceTo>LLC_BI__DocClass__c</referenceTo>
        <relationshipLabel>DocInfos</relationshipLabel>
        <relationshipName>DocInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Document Type</label>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipLabel>DocInfos</relationshipLabel>
        <relationshipName>DocInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__attachmentId__c</fullName>
        <description>This field is not currently used.</description>
        <label>attachmentId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__fileSize__c</fullName>
        <description>This field is not currently used.</description>
        <label>fileSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__isFolder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>isFolder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ownerObjectId__c</fullName>
        <description>This field is not currently used.</description>
        <label>ownerObjectId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__parentId__c</fullName>
        <description>This field is not currently used.</description>
        <label>parentId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__version__c</fullName>
        <description>This field is not currently used.</description>
        <label>version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DocInfo</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>